--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
     </nav>   
     <main>
       <div class="blog-card">
-        <div class="img-placeholder-first" alt="Tentative laptop">
+        <div class="img-placeholder-first">
           <span class="first-caption">Laptop by <a href="https://unsplash.com/@wesson?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Wesson Wang</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></div>
         <div class="bc-data">
           <h2 class="blog-title-one">So, it begins</h2>
-          <button class="continue-to-post first-button"><a href="blog-post.html">Go to post</a></button>
+            <form action="blog-post.html">
+                <button type="submit" class="continue-to-post first-button">Go to post</button>
+            </form>
         </div>
       </div>
       <div class="blog-card">
-        <div class="img-placeholder-other" alt="Under construction">
+        <div class="img-placeholder-other">
           <span class="other-caption">Under Construction by <a href="https://www.pexels.com/photo/under-construction-signage-on-laptop-keyboard-211122/">Fernando Arcos</a> on <a href="https://www.pexels.com/photo/under-construction-signage-on-laptop-keyboard-211122/">Pexels</a></span>
         </div>      
         <div class="bc-data">
@@ -31,7 +33,7 @@
         </div>
       </div>
       <div class="blog-card">
-        <div class="img-placeholder-other" alt="Under construction">
+        <div class="img-placeholder-other">
           <span class="other-caption">Under Construction by <a href="https://www.pexels.com/photo/under-construction-signage-on-laptop-keyboard-211122/">Fernando Arcos</a> on <a href="https://www.pexels.com/photo/under-construction-signage-on-laptop-keyboard-211122/">Pexels</a></span>
         </div>
         <div class="bc-data">
@@ -40,7 +42,7 @@
         </div>
       </div>
       <div class="blog-card">
-        <div class="img-placeholder-other" alt="Under construction">
+        <div class="img-placeholder-other">
           <span class="other-caption">Under Construction by <a href="https://www.pexels.com/photo/under-construction-signage-on-laptop-keyboard-211122/">Fernando Arcos</a> on <a href="https://www.pexels.com/photo/under-construction-signage-on-laptop-keyboard-211122/">Pexels</a></span>
         </div>
         <div class="bc-data">
